longest increasing subsequence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(coding_exercises)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(coding_exercises
-        Algorithm/sorting.cpp)
+        Algorithm/sorting.cpp
+        Dynamic-Programming/longest_increasing_subsequence.cpp
+)
