longest common subsequence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_STANDARD 14)
 add_executable(coding_exercises
         Algorithm/sorting.cpp
         Dynamic-Programming/longest_increasing_subsequence.cpp
+        Dynamic-Programming/longest_common_subsequence.cpp
 )
