--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,4 +9,5 @@ add_executable(coding_exercises
         Dynamic-Programming/longest_common_subsequence.cpp
         Trie/replace_word.cpp
         Array-and-Hashing/continuous_subarray_sum.cpp
+        Array-and-Hashing/relative_sort_array.cpp
 )
